implemented local toolbar for views